--- a/javadevices/SPIDERSetup.form
+++ b/javadevices/SPIDERSetup.form
@@ -1,4 +1,4 @@
-<?xml version="1.1" encoding="UTF-8" ?>
+<?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.2" maxVersion="1.7" type="org.netbeans.modules.form.forminfo.JDialogFormInfo">
   <Properties>
@@ -21,7 +21,7 @@
     <AuxValue name="FormSettings_listenerGenerationStyle" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_variablesLocal" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_variablesModifier" type="java.lang.Integer" value="2"/>
-    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,44,0,0,2,43"/>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,107,0,0,2,43"/>
   </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
@@ -53,7 +53,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
             <Property name="columns" type="int" value="1"/>
-            <Property name="rows" type="int" value="3"/>
+            <Property name="rows" type="int" value="4"/>
           </Layout>
           <SubComponents>
             <Container class="javax.swing.JPanel" name="jPanel3">
@@ -167,6 +167,43 @@
                 </Component>
               </SubComponents>
             </Container>
+            <Container class="javax.swing.JPanel" name="jPanel11">
+              <Properties>
+                <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+                  <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
+                    <TitledBorder title="NI 6368 Timing"/>
+                  </Border>
+                </Property>
+              </Properties>
+
+              <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+              <SubComponents>
+                <Component class="DeviceField" name="deviceField14">
+                  <Properties>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="Start Time: "/>
+                    <Property name="numCols" type="int" value="4"/>
+                    <Property name="offsetNid" type="int" value="12"/>
+                  </Properties>
+                </Component>
+                <Component class="DeviceField" name="deviceField15">
+                  <Properties>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="Duration"/>
+                    <Property name="numCols" type="int" value="4"/>
+                    <Property name="offsetNid" type="int" value="13"/>
+                  </Properties>
+                </Component>
+                <Component class="DeviceField" name="deviceField16">
+                  <Properties>
+                    <Property name="identifier" type="java.lang.String" value=""/>
+                    <Property name="labelString" type="java.lang.String" value="Frequency: "/>
+                    <Property name="numCols" type="int" value="4"/>
+                    <Property name="offsetNid" type="int" value="11"/>
+                  </Properties>
+                </Component>
+              </SubComponents>
+            </Container>
           </SubComponents>
         </Container>
         <Container class="javax.swing.JPanel" name="jPanel2">
@@ -184,7 +221,7 @@
               <Properties>
                 <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
                   <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
-                    <TitledBorder title="From Timing"/>
+                    <TitledBorder title="Breakdown Management"/>
                   </Border>
                 </Property>
               </Properties>
@@ -199,33 +236,17 @@
                 <Component class="DeviceField" name="deviceField10">
                   <Properties>
                     <Property name="identifier" type="java.lang.String" value=""/>
-                    <Property name="labelString" type="java.lang.String" value="Start Time: "/>
+                    <Property name="labelString" type="java.lang.String" value="Dead time Time: "/>
                     <Property name="numCols" type="int" value="4"/>
-                    <Property name="offsetNid" type="int" value="12"/>
+                    <Property name="offsetNid" type="int" value="14"/>
                   </Properties>
                 </Component>
                 <Component class="DeviceField" name="deviceField11">
                   <Properties>
                     <Property name="identifier" type="java.lang.String" value=""/>
-                    <Property name="labelString" type="java.lang.String" value="Duration: "/>
+                    <Property name="labelString" type="java.lang.String" value="Recover time: "/>
                     <Property name="numCols" type="int" value="4"/>
-                    <Property name="offsetNid" type="int" value="13"/>
-                  </Properties>
-                </Component>
-                <Component class="DeviceField" name="deviceField12">
-                  <Properties>
-                    <Property name="identifier" type="java.lang.String" value=""/>
-                    <Property name="labelString" type="java.lang.String" value="Frequency: "/>
-                    <Property name="numCols" type="int" value="4"/>
-                    <Property name="offsetNid" type="int" value="11"/>
-                  </Properties>
-                </Component>
-                <Component class="DeviceField" name="deviceField13">
-                  <Properties>
-                    <Property name="identifier" type="java.lang.String" value=""/>
-                    <Property name="labelString" type="java.lang.String" value="Duty Cycle: "/>
-                    <Property name="numCols" type="int" value="4"/>
-                    <Property name="offsetNid" type="int" value="14"/>
+                    <Property name="offsetNid" type="int" value="15"/>
                   </Properties>
                 </Component>
               </SubComponents>
@@ -253,7 +274,7 @@
                     <Container class="DeviceWave" name="deviceWave1">
                       <Properties>
                         <Property name="identifier" type="java.lang.String" value=""/>
-                        <Property name="offsetNid" type="int" value="16"/>
+                        <Property name="offsetNid" type="int" value="17"/>
                         <Property name="updateExpression" type="java.lang.String" value=""/>
                       </Properties>
                       <Constraints>
@@ -280,7 +301,7 @@
                     <Container class="DeviceWave" name="deviceWave2">
                       <Properties>
                         <Property name="identifier" type="java.lang.String" value=""/>
-                        <Property name="offsetNid" type="int" value="22"/>
+                        <Property name="offsetNid" type="int" value="23"/>
                         <Property name="updateExpression" type="java.lang.String" value=""/>
                       </Properties>
                       <Constraints>
@@ -307,7 +328,7 @@
                     <Container class="DeviceWave" name="deviceWave3">
                       <Properties>
                         <Property name="identifier" type="java.lang.String" value=""/>
-                        <Property name="offsetNid" type="int" value="28"/>
+                        <Property name="offsetNid" type="int" value="29"/>
                         <Property name="updateExpression" type="java.lang.String" value=""/>
                       </Properties>
                       <Constraints>
@@ -334,7 +355,34 @@
                     <Container class="DeviceWave" name="deviceWave4">
                       <Properties>
                         <Property name="identifier" type="java.lang.String" value=""/>
-                        <Property name="offsetNid" type="int" value="34"/>
+                        <Property name="offsetNid" type="int" value="35"/>
+                        <Property name="updateExpression" type="java.lang.String" value=""/>
+                      </Properties>
+                      <Constraints>
+                        <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
+                          <BorderConstraints direction="Center"/>
+                        </Constraint>
+                      </Constraints>
+
+                      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignFlowLayout"/>
+                    </Container>
+                  </SubComponents>
+                </Container>
+                <Container class="javax.swing.JPanel" name="jPanel12">
+                  <Constraints>
+                    <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout" value="org.netbeans.modules.form.compat2.layouts.support.JTabbedPaneSupportLayout$JTabbedPaneConstraintsDescription">
+                      <JTabbedPaneConstraints tabName="Recover Wave">
+                        <Property name="tabTitle" type="java.lang.String" value="Recover Wave"/>
+                      </JTabbedPaneConstraints>
+                    </Constraint>
+                  </Constraints>
+
+                  <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout"/>
+                  <SubComponents>
+                    <Container class="DeviceWave" name="deviceWave5">
+                      <Properties>
+                        <Property name="identifier" type="java.lang.String" value=""/>
+                        <Property name="offsetNid" type="int" value="41"/>
                         <Property name="updateExpression" type="java.lang.String" value=""/>
                       </Properties>
                       <Constraints>
